--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title></title>
   </head>
   <body>
+    <h1 style="text-align: center;">Refresh to check another love percentage</h1>
     <script src="./scripts/love.js" charset="utf-8"></script>
   </body>
 </html>
